const { NotificationAck } = require("./generated/notification_service_pb.js");
const {
  NotificationClient,
} = require("./generated/notification_service_grpc_web_pb.js");

// ‚úÖ Use correct gRPC-Web endpoint with `https://`
const notificationService = new NotificationClient(
  "https://grpc.sandbox.moving.tech:50051",
  null,
  {
    withCredentials: true, // Ensure no CORS credential issues
  }
);

// ‚úÖ Create the metadata correctly
const metadata = {
  "token-origin": "DriverDashboard",
  token: "d8a51bfb-0b17-433c-a6db-6bb2c045d599",
};

// ‚úÖ Prepare the initial request
const request = new NotificationAck();
request.setId("0-0");

const startStream = () => {
  // ‚úÖ Start gRPC-Web streaming correctly
  const stream = notificationService.serverStreamPayload(request, metadata);

  stream.on("data", (response) => {
    console.log("üì© Received Notification:", response.toObject());
  });

  stream.on("status", (status) => {
    console.log("üîÑ Stream Status:", status);
  });

  // ‚úÖ Handle errors properly
  stream.on("error", (err) => {
    console.error("‚ùå Stream Error:", err);
    setTimeout(() => {
      console.log("‚ôªÔ∏è Reconnecting...");
      startStream(); // Automatically restart the stream
    }, 1000);
  });

  // ‚úÖ Handle when stream ends
  stream.on("end", () => {
    console.log("üîÑ Stream Ended. Reconnecting...");
    setTimeout(() => {
      console.log("‚ôªÔ∏è Reconnecting...");
      startStream(); // Automatically restart the stream
    }, 1000);
  });
};

startStream();
